# rust-cron-example

./: .env  Cargo.toml  README.md
migrations/2024-05-08-193545_notifications/: down.sql  up.sql
migrations/2024-05-09-140248_create_authors/: down.sql  up.sql
migrations/2024-05-09-140258_create_books/: up.sql
src/: main.rs  model.rs  scheduler.rs  schema.rs
