[package]
name = "simple-cron-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
actix-rt = "2.7.0"

# Date and time library for Rust
chrono = "0.4.22"

# schedule tasks in tokio runtime
tokio_schedule = "0.3.0"

#Diesel database
diesel = {version="2.1.0" , features=["postgres","chrono"]} # no backend features need to be enabled
diesel-async = { version = "0.3.1", features = ["postgres"] }

dotenvy = "0.15"